post-modify: git basic

--- a/_posts/2015-09-16-git-basic.md
+++ b/_posts/2015-09-16-git-basic.md
@@ -146,7 +146,7 @@ tags: [git]
 
 然后，点“Add SSH Key”，填上任意Title，在Key文本框里粘贴id_rsa.pub文件的内容：
 
-![添加 SSH Key]({site.url}/images/2015-09-16-git-basic/add_ssh.png)
+![添加 SSH Key](/images/2015-09-16-git-basic/add_ssh.png)
 
 要关联一个远程库，使用命令
 
@@ -167,24 +167,24 @@ tags: [git]
 ##分支管理
 当我们创建新的分支，例如dev时，Git新建了一个指针叫dev，指向master相同的提交，再把HEAD指向dev，就表示当前分支在dev上
 
-![分支管理1]({site.url}/images/2015-09-16-git-basic/git_branch1.png)
-![分支管理2]({site.url}/images/2015-09-16-git-basic/git_branch2.png)
+![分支管理1](/images/2015-09-16-git-basic/git_branch1.png)
+![分支管理2](/images/2015-09-16-git-basic/git_branch2.png)
 
 你看，Git创建一个分支很快，因为除了增加一个dev指针，改改HEAD的指向，工作区的文件都没有任何变化！
 
 不过，从现在开始，对工作区的修改和提交就是针对dev分支了，比如新提交一次后，dev指针往前移动一步，而master指针不变：
 
-![分支管理3]({site.url}/images/2015-09-16-git-basic/git_branch3.png)
+![分支管理3](/images/2015-09-16-git-basic/git_branch3.png)
 
 假如我们在dev上的工作完成了，就可以把dev合并到master上。Git怎么合并呢？最简单的方法，就是直接把master指向dev的当前提交，就完成了合并：
 
-![分支管理4]({site.url}/images/2015-09-16-git-basic/git_branch4.png)
+![分支管理4](/images/2015-09-16-git-basic/git_branch4.png)
 
 所以Git合并分支也很快！就改改指针，工作区内容也不变！
 
 合并完分支后，甚至可以删除dev分支。删除dev分支就是把dev指针给删掉，删掉后，我们就剩下了一条master分支：
 
-![分支管理5]({site.url}/images/2015-09-16-git-basic/git_branch5.png)
+![分支管理5](/images/2015-09-16-git-basic/git_branch5.png)
 
 ###创建与合并分支
 
@@ -203,7 +203,7 @@ tags: [git]
 
 在dev分支上commit的数据,切回master后不会存在,通过`gitmerge` 来合并两个分支
 
-![创建与合并分支]({site.url}/images/2015-09-16-git-basic/git_branch6.png)
+![创建与合并分支](/images/2015-09-16-git-basic/git_branch6.png)
 
 	$ git merge dev
 	Updating d17efd8..fec145a
@@ -221,7 +221,7 @@ tags: [git]
 ###解决冲突
 分别在master和dev分支对同一个文件进行了修改和提交后
 
-![解决冲突1]({site.url}/images/2015-09-16-git-basic/solve_conflict1.png)
+![解决冲突1](/images/2015-09-16-git-basic/solve_conflict1.png)
 
 这种情况下，Git无法执行“快速合并”，只能试图把各自的修改合并起来，但这种合并就可能会有冲突
 
@@ -234,7 +234,7 @@ tags: [git]
 Git用<<<<<<<，=======，>>>>>>>标记出不同分支的内容
 修改完后再add commit
 
-![解决冲突2]({site.url}/images/2015-09-16-git-basic/solve_conflict2.png)
+![解决冲突2](/images/2015-09-16-git-basic/solve_conflict2.png)
 
 用带参数的git log也可以看到分支的合并情况
 
@@ -275,7 +275,7 @@ Git用<<<<<<<，=======，>>>>>>>标记出不同分支的内容
 那在哪干活呢？干活都在dev分支上，也就是说，dev分支是不稳定的，到某个时候，比如1.0版本发布时，再把dev分支合并到master上，在master分支发布1.0版本；
 你和你的小伙伴们每个人都在dev分支上干活，每个人都有自己的分支，时不时地往dev分支上合并就可以了。
 
-![支管理策略]({site.url}/images/2015-09-16-git-basic/branch_manage1.png)
+![支管理策略](/images/2015-09-16-git-basic/branch_manage1.png)
 
 ###stash暂时保存工作区域
 
