--- a/_posts/2015-09-16-git-basic.md
+++ b/_posts/2015-09-16-git-basic.md
@@ -5,8 +5,10 @@ description: "Basic concepts and commands of Git"
 category: Develop
 tags: [git]
 ---
-{% include JB/setup %}
 
+参考廖雪峰的Git教程[^link1]，学习整理而来
+
+[^link1]: [廖雪峰的Git教程](http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000)
 
 ##创建版本库
 在一个文件夹下创建仓库
