post: unittest for asynchtask

--- a/_posts/2015-09-16-git-basic.md
+++ b/_posts/2015-09-16-git-basic.md
@@ -404,3 +404,8 @@ Git用<<<<<<<，=======，>>>>>>>标记出不同分支的内容
 
 ##.gitignore
 [各语言常用.gitignore](https://github.com/github/gitignore)
+
+如果已经对某个文件进行跟踪，然后才加入 .gitignore，这种情况再ignore不不会生效
+
+取消对某个文件的跟踪(不会删除)
+git rm --cached FILENAME
