--- a/_posts/2015-09-16-git-basic.md
+++ b/_posts/2015-09-16-git-basic.md
@@ -407,5 +407,10 @@ Git用<<<<<<<，=======，>>>>>>>标记出不同分支的内容
 
 如果已经对某个文件进行跟踪，然后才加入 .gitignore，这种情况再ignore不不会生效
 
-取消对某个文件的跟踪(不会删除)
-git rm --cached FILENAME
+当文件在暂存区的时候(只add,还没commit)取消对某个文件的跟踪(不会删除)
+git rm --cached your_file_path
+
+如果已经提交了,要在本地忽略对它的改动
+git update-index --assume-unchanged your_file_path
+反之再次追踪
+git update-index --no-assume-unchanged your_file_path
