--- a/_posts/2017-12-22-svm.md
+++ b/_posts/2017-12-22-svm.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Support Vector Machine 决策树"
+title: "Support Vector Machine 支持向量机"
 description: "Support Vector Machine"
 category: 
 tags: [ML]
