--- a/JupyterNotes/从 Boosted Tree 到 GBDT 再到 XGBoost.ipynb
+++ b/JupyterNotes/从 Boosted Tree 到 GBDT 再到 XGBoost.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 从 Boosted Tree 到 GBDT 再到 XGBoost\n",
+    "\n",
     "## Table Of Content\n",
     "\n",
     "简单带过 Boosting , BT, GBDT, 详细推导 XGBoost.\n",
