--- a/_posts/2017-12-22-svm.md
+++ b/_posts/2017-12-22-svm.md
@@ -6,6 +6,16 @@ category:
 tags: [ML]
 ---
 
+支持向量机 (Support Vector Machine)
+
+- 函数间隔
+- 几何间隔
+- 拉格朗日乘子法 和 KKT条件
+	- 拉格朗日对偶
+- 核方法
+- 松弛变量
+- 支持向量机回归
+
 [jupyter 文档](http://nbviewer.jupyter.org/github/Ringares/Ringares.github.io/blob/master/JupyterNotes/SVM%20支持向量机.ipynb)
 
 
