--- a/_posts/2017-12-22-svm.md
+++ b/_posts/2017-12-22-svm.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Support Vector Machine 支持向量机"
 description: "Support Vector Machine"
-category: 
+category: Machine Learning
 tags: [ML]
 ---
 
