--- a/JupyterNotes/[Tool] Hash Trick.ipynb
+++ b/JupyterNotes/[Tool] Hash Trick.ipynb
@@ -4,31 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Hashing"
+    "# 特征工程之 Feature Hashing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "大多数机器学习算法, 都需要输入的数据是实数矩阵. 而从原始数据到实数矩阵的过程就是特征工程的工作. Feature Hashing ( aka. Hash Trick ) 是特征工程的一种技术.\n",
+    "大多数机器学习算法, 都需要输入的数据是实数矩阵. 而从原始数据到实数矩阵的过程就是特征工程的工作. Feature Hashing ( aka. Hash Trick ) 是特征工程的一种技术. 原理是将同样的特征值映射到同一个index值上, 这个index值就可以用于稀疏向量的表示.\n",
     "\n",
-    "通常处理类别型特征的 One-Hot-Encoding 相比, Hash Trick 有以下优点和存在的问题:\n",
+    "先考虑以下这些场景下的特征处理:\n",
+    "\n",
+    "- 数据量非常大, 类别型特征可能的值非常多\n",
+    "- 类别型特征可能的值不确定, 会经常发生变化, 或者有新的值出现\n",
+    "\n",
+    "通常处理类别型特征的 One-Hot-Encoding (dummy coding)相比, Hash Trick 有以下优点和存在的问题:\n",
     "\n",
     "优点: \n",
     "- 实现非常简单\n",
+    "- 计算量小\n",
     "- 不需要提前准备映射的字典, ( OHE 需要提前将所有类别型特征的值和二进制编码一一对应起来, 然后这个映射关系, 在训练和应用阶段都需要使用, 在有超多值的特征的情况下, 这就是一笔很大的开销 )\n",
-    "- 适用于在线学习, ( 因为 OHE 没办法提前对所有数据准备映射 )\n",
+    "- 适用于在线学习, ( 因为 OHE 没办法提前对所有数据准备映射表 )\n",
+    "- 适用于大规模的文本的特征向量化 (e.g. BOW 词袋模型)\n",
     "\n",
     "问题:\n",
     "- 哈希碰撞 (实践得出, 通常碰撞不怎么影响模型的精度)\n",
-    "- 经过 特征Hash 之后的特征的值没有可解释性, 也不可逆\n"
+    "- 经过 特征Hash 之后的特征值没有可解释性, 也不可逆\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 实现\n",
+    "\n",
     "WIKI 上简单实现的伪代码如下, N 为输出特性向量的维度\n",
     "\n",
     "```\n",
@@ -45,9 +54,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在实际使用中, 我们把所有原始特征的特征 Name 和 Value 进行拼接后作为输入 (e.g. category_1101); 而输出的值在预先设定好的 [0,N] 范围内, 直接可以转化为 N 维的稀疏向量. \n",
+    "## 改进\n",
     "\n",
-    "至于 N 的选择是需要调整的; 过小的维度会导致过多的碰撞, 而过大的维度, 又会导致模型参数的维度过大 (通常选择为 2^10 左右)."
+    "- Signed Hash Trick\n",
+    "\n",
+    "```\n",
+    "function hashing_vectorizer(features : array of string, N : integer):\n",
+    "     x := new vector[N]\n",
+    "     for f in features:\n",
+    "         h := hash(f)\n",
+    "         idx := h mod N\n",
+    "         if ξ(f) == 1:\n",
+    "             x[idx] += 1\n",
+    "         else:\n",
+    "             x[idx] -= 1\n",
+    "     return x\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 应用\n",
+    "\n",
+    "在实际使用中, 我们把所有原始特征的特征 Name 和 Value 进行拼接后作为输入 (e.g. category_1101); 而输出的值在预先设定好的 [0,N] 范围内, 直接可以转化为 N 维的稀疏向量. 每一条输入数据, 生成一条 N 维的稀疏向量. \n",
+    "\n",
+    "需要注意的问题:\n",
+    "\n",
+    "- 至于 N 的选择是需要调整的; 过小的维度会导致过多的碰撞, 而过大的维度, 又会导致模型参数的维度过大.\n",
+    "- 保证训练阶段和应用阶段的 Hash Function 的一致 (例如,不能使用 python 内置函数 hash)"
    ]
   },
   {
@@ -56,6 +92,8 @@
    "source": [
     "## Ref\n",
     "\n",
+    "- paper: https://alex.smola.org/papers/2009/Weinbergeretal09.pdf\n",
+    "- wiki: https://en.wikipedia.org/wiki/Feature_hashing\n",
     "- https://stackoverflow.com/questions/8673035/what-is-feature-hashing-hashing-trick\n",
     "- https://www.quora.com/Can-you-explain-feature-hashing-in-an-easily-understandable-way?utm_medium=organic&utm_source=google_rich_qa&utm_campaign=google_rich_qa"
    ]
