--- a/JupyterNotes/从 Boosted Tree 到 GBDT 再到 XGBoost.ipynb
+++ b/JupyterNotes/从 Boosted Tree 到 GBDT 再到 XGBoost.ipynb
@@ -22,6 +22,7 @@
     "    - 结构分数\n",
     "    - 树结构的搜索算法\n",
     "    - 参考\n",
+    "- 应用FAQ\n",
     "- 其它 "
    ]
   },
@@ -440,6 +441,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 应用FAQ\n",
+    "\n",
+    "- Q: 树结构的算法, 类别型的数据如何处理\n",
+    "    - A: 通常只需要做 Ordinal Encoding 就可以了, 不需要 OneHot ; https://github.com/szilard/benchm-ml/issues/1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 参考\n",
     "\n",
     "- XGBoost 与 Boosted Tree by 陈天奇 http://www.52cs.org/?p=429\n",
@@ -482,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
