--- a/_posts/2018-09-07-lda-model.md
+++ b/_posts/2018-09-07-lda-model.md
@@ -7,6 +7,16 @@ tags: [ML]
 ---
 
 主题模型简介
+- Reference
+- 前提知识
+- 介绍
+- LDA 和 概率模型
+- 如何估计 LDA 模型参数
+- 缺点和不足
+- 主题模型应用
+- 例子
+
+
 [jupyter 文档](http://nbviewer.jupyter.org/github/Ringares/Ringares.github.io/blob/master/JupyterNotes/%5BTool%5D%20Hash%20Trick.ipynb)
 
 
