--- a/_posts/2018-09-07-lda-model.md
+++ b/_posts/2018-09-07-lda-model.md
@@ -17,6 +17,6 @@ tags: [ML]
 - 例子
 
 
-[jupyter 文档](http://nbviewer.jupyter.org/github/Ringares/Ringares.github.io/blob/master/JupyterNotes/%5BTool%5D%20Hash%20Trick.ipynb)
+[jupyter 文档](http://nbviewer.jupyter.org/github/Ringares/Ringares.github.io/blob/master/JupyterNotes/%5BBasic%5D%20LDA%20主题模型.ipynb)
 
 
